package techstore.patterns.templatemethod;

public class StorePickupOrderProcess {
}
