@startuml TechStoreTemplateMethodPattern

skinparam class {
    BackgroundColor<<Abstract>> LightBlue
    BackgroundColor<<Concrete>> LightGreen
    BackgroundColor<<Strategy>> LightYellow
}

abstract class OrderProcessingTemplate <<Abstract>> {
    + {final} processOrder(Order, PaymentStrategy)
    # initializeOrder(Order)
    # assignPaymentMethod(Order, PaymentStrategy)
    # validatePayment(Order): boolean
    # confirmPayment(Order)
    # {abstract} updateInventory()
    # {abstract} notifyClient(Order)
    # finalizeOrder(Order)
    # handlePaymentFailure(Order)
}

class OnlineOrderProcess <<Concrete>> {
    + updateInventory()
    + notifyClient(Order)
    + finalizeOrder(Order)
}

class StorePickupOrderProcess <<Concrete>> {
    // Would implement store pickup specific logic
}

interface PaymentStrategy <<Strategy>> {
    + pay(double)
}

OrderProcessingTemplate <|-- OnlineOrderProcess
OrderProcessingTemplate <|-- StorePickupOrderProcess
OrderProcessingTemplate --> PaymentStrategy : uses

note top of OrderProcessingTemplate
  <<Abstract Template>>
  • Defines order processing algorithm
  • Some steps are fixed (final)
  • Some steps are customizable (abstract)
  • Combines with Strategy pattern\n  for payment processing
end note

note right of OnlineOrderProcess
  <<Concrete Implementation>>
  • Handles online order specifics:
    - Warehouse inventory updates
    - Email notifications
    - Shipping status
end note

note left of StorePickupOrderProcess
  <<Concrete Implementation>>
  • Would handle store pickup specifics:
    - Local inventory updates
    - SMS notifications
    - Pickup preparation
end note

@enduml